--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -18,7 +18,8 @@
     "nanoid": "^5.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "socket.io-client": "^4.7.3"
+    "socket.io-client": "^4.7.3",
+    "shared": "1.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
