--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -27,8 +27,7 @@
     "@nestjs/websockets": "^10.3.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "socket.io": "^4.7.3",
-    "tmi.js": "^1.8.5"
+    "socket.io": "^4.7.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
