--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -27,6 +27,7 @@
     "@nestjs/websockets": "^10.3.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "shared": "1.0.0",
     "socket.io": "^4.7.3"
   },
   "devDependencies": {
