--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,10 +21,13 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.3.0",
     "@nestjs/websockets": "^10.3.0",
+    "body-parser": "^1.20.2",
+    "discord-interactions": "^3.4.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "shared": "1.0.0",
